--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
       <section class="portfolio">
         <div class="conteiner">
           <h1 class="visually-hidden">Портфолио</h1>
-          <ul class="buttons list">
+          <ul class="buttons-list list">
             <li class="buttons-item">
               <button type="button" class="portfolio-button">Все</button>
             </li>
@@ -82,9 +82,9 @@
             </li>
           </ul>
 
-          <ul class="team-portfolio list">
+          <ul class="portfolio-list list">
             <li class="portfolio-item">
-              <a href="" class="team-portfolio-link">
+              <a href="" class="portfolio-link">
                 <div class="team-portfolio-top">
                   <img
                     src="./images/port1.jpg"
@@ -105,7 +105,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="team-portfolio-link">
+              <a href="" class="portfolio-link">
                 <div class="team-portfolio-top">
                   <img
                     src="./images/port2.jpg"
@@ -126,7 +126,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="team-portfolio-link">
+              <a href="" class="portfolio-link">
                 <div class="team-portfolio-top">
                   <img
                     src="./images/port3.jpg"
@@ -147,7 +147,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="team-portfolio-link">
+              <a href="" class="portfolio-link">
                 <div class="team-portfolio-top">
                   <img
                     src="./images/port4.jpg"
@@ -168,7 +168,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="team-portfolio-link">
+              <a href="" class="portfolio-link">
                 <div class="team-portfolio-top">
                   <img
                     src="./images/port5.jpg"
@@ -190,7 +190,7 @@
             </li>
 
             <li class="portfolio-item">
-              <a href="" class="team-portfolio-link">
+              <a href="" class="portfolio-link">
                 <div class="team-portfolio-top">
                   <img
                     src="./images/port6.jpg"
@@ -211,7 +211,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="team-portfolio-link">
+              <a href="" class="portfolio-link">
                 <div class="team-portfolio-top">
                   <img
                     src="./images/port7.jpg"
@@ -232,7 +232,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="team-portfolio-link">
+              <a href="" class="portfolio-link">
                 <div class="team-portfolio-top">
                   <img
                     src="./images/port8.jpg"
@@ -253,7 +253,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="team-portfolio-link">
+              <a href="" class="portfolio-link">
                 <div class="team-portfolio-top">
                   <img
                     src="./images/port9.jpg"
